@@ -2,8 +2,8 @@ Package: PureCN
 Type: Package
 Title: Copy number calling and SNV classification using
     targeted short read sequencing
-Version: 1.9.35
-Date: 2018-03-20
+Version: 1.9.36
+Date: 2018-03-21
 Authors@R: c(person("Markus", "Riester", role=c("aut", "cre"),
         email="markus.riester@novartis.com"),
     person("Angad P.", "Singh", role="aut"))
@@ -44,6 +44,7 @@ Imports:
 Suggests:
     PSCBS,
     BiocStyle,
+    BiocParallel,
     knitr,
     optparse,
     TxDb.Hsapiens.UCSC.hg19.knownGene,
